# Specter

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  LICENSE.txt  Navigator.sln  README.md  debug_spectra.nav  navigator.sublime-project  navigator.sublime-workspace  premake5.lua
NavProject/: NavProject.vcxproj  SPSAnalysisStage.cpp  SPSAnalysisStage.h  main.cpp
NavProject/NavProject.xcodeproj/: project.pbxproj
NavProject/NavProject.xcodeproj/xcuserdata/gordonmccann.xcuserdatad/xcschemes/: xcschememanagement.plist
NavProject/Resources/: amdc2016_mass.txt
NavProject/src/: MassMap.cpp  MassMap.h  SPSAnalysisStage.cpp  SPSAnalysisStage.h  SPSInputLayer.cpp  SPSInputLayer.h  main.cpp
Navigator/: Navigator.vcxproj  Navigator.vcxproj.filters
Navigator.xcworkspace/: contents.xcworkspacedata
Navigator.xcworkspace/xcuserdata/gordonmccann.xcuserdatad/: UserInterfaceState.xcuserstate
Navigator/Navigator.xcodeproj/: project.pbxproj
Navigator/src/: Navigator.h  navpch.cpp  navpch.h
Navigator/src/Navigator/: Application.cpp  Application.h  CompassFile.cpp  CompassHit.h  Cut.cpp  Cut.h  CutMap.cpp  CutMap.h  GraphicsContext.h  Histogram.cpp  Histogram.h  HistogramMap.cpp  HistogramMap.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  NavCore.h  Parameter.cpp  Parameter.h  ParameterMap.cpp  ParameterMap.h  ShiftMap.cpp  SpectrumManager.cpp  SpectrumManager.h  SpectrumSerializer.cpp  SpectrumSerializer.h  Window.h
Navigator/src/Navigator/Core/: Application.cpp  Application.h  Cut.cpp  Cut.h  Graph.cpp  Graph.h  Histogram.cpp  Histogram.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Parameter.cpp  Parameter.h  SpectrumManager.cpp  SpectrumManager.h  SpectrumSerializer.cpp  SpectrumSerializer.h  Timestep.h  Window.h
Navigator/src/Navigator/Editor/: EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  SourceDialog.cpp  SourceDialog.h  SpectrumDialog.cpp  SpectrumDialog.h  SpectrumPanel.cpp  SpectrumPanel.h
Navigator/src/Navigator/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  PhysicsEvent.h
Navigator/src/Navigator/ImGui/: ImGuiBuild.cpp  ImGuiExtensions.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Navigator/src/Navigator/Physics/: AnalysisStack.cpp  AnalysisStack.h  AnalysisStage.cpp  AnalysisStage.h  CompassFile.cpp  CompassFile.h  CompassHit.h  CompassOnlineSource.cpp  CompassOnlineSource.h  CompassRun.cpp  CompassRun.h  DataSource.cpp  DataSource.h  NavData.h  PhysicsEventBuilder.cpp  PhysicsEventBuilder.h  PhysicsHitSort.cpp  PhysicsHitSort.h  PhysicsLayer.cpp  PhysicsLayer.h  ShiftMap.cpp  ShiftMap.h
Navigator/src/Navigator/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Navigator/src/Navigator/Utils/: Instrumentor.h  TCPClient.cpp  TCPClient.h  TestServerLayer.cpp  TestServerLayer.h  Timer.h
Navigator/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
SpecProject/: CMakeLists.txt  README.md
SpecProject/src/: MassMap.cpp  MassMap.h  SPSAnalysisStage.cpp  SPSAnalysisStage.h  SPSApp.cpp  SPSInputLayer.cpp  SPSInputLayer.h  main.cpp
Specter/: CMakeLists.txt
Specter/cmake/: SpecterConfig.cmake.in
Specter/src/: CMakeLists.txt  Specter.h  specpch.cpp  specpch.h
Specter/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
Specter/src/Specter/Core/: Application.cpp  Application.h  Cut.cpp  Cut.h  EntryPoint.h  Graph.cpp  Graph.h  Histogram.cpp  Histogram.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Parameter.cpp  Parameter.h  SpecCore.h  SpectrumManager.cpp  SpectrumManager.h  SpectrumSerializer.cpp  SpectrumSerializer.h  Timestep.h  Window.h
Specter/src/Specter/Editor/: EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  ScalerPanel.cpp  ScalerPanel.h  SourceDialog.cpp  SourceDialog.h  SpectrumDialog.cpp  SpectrumDialog.h  SpectrumPanel.cpp  SpectrumPanel.h
Specter/src/Specter/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  PhysicsEvent.h
Specter/src/Specter/ImGui/: FA-Solid.h  ImGuiBuild.cpp  ImGuiExtensions.cpp  ImGuiLayer.cpp  ImGuiLayer.h  Roboto-Regular.h
Specter/src/Specter/Physics/: AnalysisStack.cpp  AnalysisStack.h  AnalysisStage.cpp  AnalysisStage.h  DataSource.cpp  DataSource.h  PhysicsEventBuilder.cpp  PhysicsEventBuilder.h  PhysicsLayer.cpp  PhysicsLayer.h  ShiftMap.cpp  ShiftMap.h  SpecData.h
Specter/src/Specter/Physics/Caen/: CompassFile.cpp  CompassFile.h  CompassHit.cpp  CompassHit.h  CompassOnlineSource.cpp  CompassOnlineSource.h  CompassRun.cpp  CompassRun.h
Specter/src/Specter/Physics/Daqromancy/: DYFileSource.cpp  DYFileSource.h  DYOnlineSource.cpp  DYOnlineSource.h
Specter/src/Specter/Physics/nscldaq/: CharonClient.cpp  CharonClient.h  CharonOnlineSource.cpp  CharonOnlineSource.h
Specter/src/Specter/Physics/nscldaq/Unpackers/: CaenUnpacker.cpp  CaenUnpacker.h  MesyTecUnpacker.cpp  MesyTecUnpacker.h  Unpacker.h
Specter/src/Specter/Physics/ritual/: RitualClient.cpp  RitualClient.h  RitualOnlineSource.cpp  RitualOnlineSource.h
Specter/src/Specter/Renderer/: GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h
Specter/src/Specter/Utils/: Functions.cpp  Functions.h  Instrumentor.h  RandomGenerator.h  TCPClient.cpp  TCPClient.h  TestServerLayer.cpp  TestServerLayer.h  ThreadSafeQueue.h  Timer.h
bin-int/Debug-linux-x86_64/NavProject/: main.d
bin-int/Debug-linux-x86_64/Navigator/: Application.d  CompassFile.d  CompassRun.d  Logger.d  ShiftMap.d  navpch.h.d
src/: main.cpp  navpch.h
src/Navigator/: Application.cpp  Application.h  CompassFile.cpp  CompassFile.h  CompassRun.cpp  CompassRun.h  Logger.cpp  Logger.h
(+9 files in other folders)
